--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="image/imresizer.jpg" alt="raj profile pic" width="200"></td>
+        <td><img src="imresizer.jpg" alt="raj profile pic" width="200"></td>
         <td>   <h1>Raj Mehra</h1>
            <em><p><strong>Mobile no.-7678638235</p>
            <p>Persional Emali- rajmehra09887766@gmail.com</p>
