--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <body>
     <div class="head">
 
-      <img class="topcloud"src="image\cloud.png" alt="cloud">
+      <img class="topcloud"src="cloud.png" alt="cloud">
     <h1>I'm Raj</h1>
     <p>A <span class="pro">pro</span>grammer</p>
-      <img class="bottomcloud"src="image\cloud.png" alt="cloud">
+      <img class="bottomcloud"src="cloud.png" alt="cloud">
         <img src="https://c.tenor.com/NCRHhqkXrJYAAAAi/programmers-go-internet.gif" alt="mountain">
     </div>
     <div class="mid">
       <div class="profile">
-        <img  class="profile"src="image\imresizer.jpg" alt="profile">
+        <img  class="profile"src="imresizer.jpg" alt="profile">
           <div class="Hello">
 
           <h2> Hello.</h2>
@@ -36,7 +36,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="image\computer.png" alt="computer">
+          <img class="" src="computer.png" alt="computer">
           <h3>
              C and pytone programmer
              </h3>
