--- a/personaldetails.html
+++ b/personaldetails.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>personaldetails</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
   
