--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        <p>working on full stack Web developing with HTML,CSS,Javascript,Node,React,MongoDB</p>
  </div>
 <hr>
-    <div class="foot">
+   <div class="foot">
       <div class="contact-me">
 
         <h2>Get In Touch</h2>
@@ -67,8 +67,11 @@
         <p>House No-89, Block-E, Khyala, west delhi,Delhi-110018</p>
         <a class="btn" href="personaldetails.html">CONTACT ME</a>
       </div>
-      <a class="footer-link" href="https://github.com/rajmehransit">Website</a>
-      <p>© Raj Mehra.</p>
+      <div class="footer-link">
+        <a  href="https://github.com/rajmehransit">Website</a>
+        <p class="discription">© Raj Mehra.</p>
+      </div>
+
     </div>
 
 
