--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="head">
 
       <img class="topcloud"src="cloud.png" alt="cloud">
-    <h1>I'm Raj</h1>
+    <h1>HEllO GAMER</h1>
         <img class="gif"src="https://c.tenor.com/NCRHhqkXrJYAAAAi/programmers-go-internet.gif" alt="mountain">
     <h2><span class="pro">pro</span>grammer</h2>
         <img class="bottomcloud"src="cloud.png" alt="cloud">
@@ -27,15 +27,15 @@
           <h2> Hello.</h2>
         <p>
           <ul>
-            <li>currently pursuing Bachelor of Engineering from NSIT(2018-22) Delhi under the branch manufacturing process and automation process-6.14 CGPA</li>
-            <li>completed 12th class from cbse(2018)-66.8%</li>
-            <li>completed 10th class from cbse(2016)-9 cgpa</li>
+            <li>currently pursuing Bachelor of Engineering from NSIT(2018-22) Delhi under the branch manufacturing process and automation process project</li>
+            <li>Designed a web app with front-end web deveopment</li>
+            <li>With some security purpose process of subscription done</li>
           </ul>
         </p></div>
       </div>
   <hr>
       <div class="skills">
-        <h2 class="My GUITAR">My Skills.</h2>
+        <h2 class="My GUITAR">HOW TO START.</h2>
 <div class="skill-row">
 
 
@@ -64,11 +64,11 @@
 
         <h2>LETS PLAY</h2>
         <h3>Address</h3>
-        <p>House No-89, Block-E, Khyala, west delhi,Delhi-110018</p>
-        <a class="btn" href="login\">PLAY</a>
+        <a  class="btn" href="personaldetailsnew.php">subscrib</a>
+        <a class="btn" href="login">PLAY</a>
       </div>
       <div class="footer-link">
-        <a  class="btn" href="login/index.html">subscrib</a>
+       
         <p class="discription">© Raj Mehra.</p>
       </div>
 
