--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a class="btn" href="login">PLAY</a>
       </div>
       <div class="footer-link">
-        <a  class="btn" href="subscrib/personaldetailsnew.html">subscrib</a>
+        <a  class="btn" href="subscrib">subscrib</a>
         <p class="discription">© Raj Mehra.</p>
       </div>
 
