--- a/subscrib/index.html
+++ b/subscrib/index.html
@@ -17,7 +17,7 @@
       
       
       <!-- Form fields -->
-      <form action = "authentication.php" onsubmit = "return validation()" method = "POST">
+      <form action = "submit.php" onsubmit = "return validation()" method = "POST">
           <div class="form-input">
               <label for="name">Name</label>
               <input type="text" name="name" placeholder="Enter your name" class="form control" oninvalid="this.setCustomValidity('Please enter valid Name')" oninput="setCustomValidity('')" value="" required="">
