--- a/login/index.html
+++ b/login/index.html
@@ -17,8 +17,14 @@
                 <input type = "password" id ="pass" name  = "pass" />  
             </p>  
             <p>     
-                <input type =  "submit" id = "btn" value = "Login" />  
+                  <input type =  "submit" id = "btn" value = "Login" />
             </p>  
+            <p>
+                <label>if you get errors please visit github Repository linke below.</label>
+                <input  action = "https://github.com/rajmehransit/GUITAR_WEB_APP" type =  "button" id = "btn" value = "repo" />
+             </p>
+              
+    
         </form>  
     </div>     
     <script>  
