--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
      <h3>HOW TO PLAY</h3>
        <p>YOU can play just clicking on dottes name by alphabets  </p>
  </div>
+ <div>
+   <video width="500px" height="500px"  controls>
+     <source src="vid.mp4" type="video/mp4"> 
+   </video>
+  
+</div>
 <hr>
     <div class="foot">
       <div class="contact-me">
